# Machine_learning_and_deep_learning_with_CPP

./: .gitignore  CMakeLists.txt  README.md
src/Deep_learning/: CMakeLists.txt
src/Deep_learning/Ch02_Linear_algebra/: Check_matplotplusplus.cpp  Linear_algebra.cpp
src/Deep_learning/Ch03_Probability_and_information_theory/: Information_theory.cpp  Probability.cpp
src/Deep_learning/Ch04_Numerical_computation/: Numerical_computation.cpp
src/Deep_learning/Ch05_Machine_learning_basics/: Machine_learning_basics.cpp  Supervised_learning_algorithms.cpp  Unsupervised_learning_algorithms.cpp
src/Deep_learning/Ch06_Deep_feedforward_networks/: MLP.cpp  XOR.cpp  activation_function_demo.cpp
src/Deep_learning/Ch07_Regularization/: Bagging.cpp  Dataset_augmentation.cpp  RandomForest.cpp  Regularization.cpp  dropout.cpp  weight_decay.cpp
src/Deep_learning/Ch08_Optimization/: BatchNormalization.cpp  GradientDescent.cpp  Optimization_demo.cpp
src/Deep_learning/Ch09_Convolutional_networks/: ConvolutionalNetworks.cpp
src/Deep_learning/Ch10_SequenceModeling/: 1D_Convolutions.cpp  Attention.cpp  Encoder_decoder.h  GatedRecurrentUnits.cpp  LongShortTermMemory.cpp  RNN.cpp  RecurrentNeuralNetworks.cpp  Sequence2Sequence.cpp  VariableLengthSequences.cpp
src/Deep_learning/Ch11_PracticalMethodology/: HyperparameterOptimization.cpp  PracticalMethodology.cpp
src/Deep_learning/Ch12_Applications/: ClassSpecificImageGeneration.cpp  NeuralMachineTranslation.cpp
src/Deep_learning/Ch13_Linear_factor_models/: Probabilstic_PCA.cpp
src/Deep_learning/Ch14_Autoencoders/: DenoisingAutoencoder.cpp  RegularizedAutoEncoder.cpp
src/Machine_learning_method/P1_supervised_learning/: CMakeLists.txt
src/Machine_learning_method/P1_supervised_learning/Ch01_Introduction/: Introduction.cpp
src/Machine_learning_method/P1_supervised_learning/Ch02_Perceptron/: Perceptron.cpp
src/Machine_learning_method/P1_supervised_learning/Ch03_KNearestNeighbors/: KNearestNeighbors.cpp
src/Machine_learning_method/P1_supervised_learning/Ch04_Naive_Bayes/: Naive_Bayes.cpp
src/Machine_learning_method/P1_supervised_learning/Ch05_Decision_tree/: Decision_tree.cpp
src/Machine_learning_method/P1_supervised_learning/Ch06_Logistic_regression/: Logistic_regression.cpp
src/Machine_learning_method/P1_supervised_learning/Ch07_Support_vector_machine/: Support_vector_machine.cpp
src/Machine_learning_method/P1_supervised_learning/Ch08_AdaBoost/: AdaBoost.cpp
src/Machine_learning_method/P1_supervised_learning/Ch09_Expectation_maximization/: ExpectationMaximization.cpp  Gaussian_Mixture_Model.cpp
src/Machine_learning_method/P1_supervised_learning/Ch10_HiddenMarkov/: HiddenMarkov_approximation.cpp  HiddenMarkov_baum_welch.cpp  HiddenMarkov_viterbi.cpp
src/Machine_learning_method/P1_supervised_learning/Ch11_Conditional_random_field/: CRF.cpp
src/Machine_learning_method/P1_supervised_learning/Ch12_Supervised_learning_summary/: Supervised_learning_summary.cpp
src/Machine_learning_method/P2_unsupervised_learning/: CMakeLists.txt
src/Machine_learning_method/P2_unsupervised_learning/Ch14_Clustering/: KMeans_clustering.cpp
src/Machine_learning_method/P2_unsupervised_learning/Ch15_SVD/: SVD.cpp
src/Machine_learning_method/P2_unsupervised_learning/Ch16_PCA/: pca.cpp
src/Machine_learning_method/P2_unsupervised_learning/Ch17_LSA/: LSA.cpp  LatentSemanticAnalysis.cpp
src/Machine_learning_method/P2_unsupervised_learning/Ch18_PLSA/: EM_based_PLSA.cpp  PLSA.cpp
src/Machine_learning_method/P2_unsupervised_learning/Ch19_MCMC_MonteCarlo/: Gibbs_sampling.cpp  MCMC.cpp  (+2 more)
src/Machine_learning_method/P3_deep_learning/: CMakeLists.txt
src/Machine_learning_method/P4_others/: CMakeLists.txt
src/Machine_learning_method/P5_appends/: CMakeLists.txt
src/Understanding_DL/: CMakeLists.txt
src/Understanding_DL/Ch01_BackgroundMaths/: BackgroundMaths.cpp  CMakeLists.txt
src/Understanding_DL/Ch02_SupervisedLearning/: CMakeLists.txt  SupervisedLearning.cpp
src/Understanding_DL/Ch03_ShallowNeuralNetworks/: ActivationFunctions.cpp  CMakeLists.txt  ShallowNetworkRegions.cpp  ShallowNetworks_I.cpp  ShallowNetworks_II.cpp
src/Understanding_DL/Ch04_DeepNeuralNetworks/: C4_1_ComposingNeuralNetworks.cpp  C4_2_Clipping_functions.cpp  C4_3_Deep_Networks.cpp  CMakeLists.txt
src/Understanding_DL/Ch05_Loss_functions/: C5_1_Least_Squares_Loss.cpp  C5_2_Binary_Cross_Entropy_Loss.cpp  C5_3_Multiclass_Cross_entropy_Loss.cpp  CMakeLists.txt
src/Understanding_DL/Ch06_Fitting_models/: C6_1_Line_Search.cpp  C6_2_Gradient_Descent.cpp  C6_3_Stochastic_Gradient_Descent.cpp  C6_4_Momentum.cpp  C6_5_Adam.cpp  CMakeLists.txt
src/Understanding_DL/Ch07_Gradients_and_initialization/: C7_1_Backpropagation_in_toy_model.cpp  C7_2_Backpropagation.cpp  C7_3_Initialization.cpp  C7_4_Simple_example.cpp  CMakeLists.txt
src/Understanding_DL/Ch08_Measuring_performance/: C8_1_MNIST_1D_Performance.cpp  C8_2_Bias_variance_trade_off.cpp  C8_3_Double_descent.cpp  C8_4_High_dimensional_spaces.cpp  CMakeLists.txt
src/Understanding_DL/Ch09_Regularization/: C9_1_L2_Regularization.cpp  C9_2_Implicit_regularization.cpp  C9_3_Ensembling.cpp  C9_4_Bayesian_approach.cpp  C9_5_Augmentation.cpp  CMakeLists.txt
src/Understanding_DL/Ch10_Convolutional_networks/: C10_1_1D_Convolution.cpp  C10_2_Convolution_for_MNIST1D.cpp  C10_3_2D_Convolution.cpp  C10_4_Down_and_Up_sampling.cpp  C10_5_Convolution_for_MNIST.cpp  CMakeLists.txt
src/Understanding_DL/Ch11_Residual_networks/: C11_1_Shattered_gradients.cpp  C11_2_Residual_Networks.cpp  C11_3_Batch_normalization.cpp  CMakeLists.txt
src/Understanding_DL/Ch12_Transformers/: C12_1_Self_Attention.cpp  C12_2_Multihead_self_attention.cpp
src/Understanding_DL/Ch13_Graph_neural_networks/: C13_1_Graph_representation.cpp  C13_2_Graph_classification.cpp  C13_4_Graph_attention_networks.cpp  CMakeLists.txt
src/Understanding_DL/Ch15_Generative_adversarial_networks/: C15_1_GAN_toy_example.cpp  C15_2_Wasserstein_distance.cpp  CMakeLists.txt
src/Understanding_DL/Ch16_Normalizing_flows/: C16_1_1D_normalizing_flows.cpp  CMakeLists.txt
(+52 files in other folders)
